--- a/index.html
+++ b/index.html
@@ -1,19 +1,200 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>系统信息0123ABCDabcd</title><meta name="keywords" content="系统信息0123ABCDabcd" /><meta name="description" content="系统信息0123ABCDabcd" /><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="black" /><meta name="format-detection" content="telephone=no" /><meta name="viewport" content="width=640,user-scalable=no"><link rel="stylesheet" href="m_temp/css/swiper.min.css"><link rel="stylesheet" href="m_temp/css/style.css"><style>
+.header {
+	background: rgba(#f00, 1);
+}
+.banner .swiper-pagination .swiper-pagination-bullet {
+	background: rgba(50, 179, 255, 1);
+}
+.nav_box ul li {
+	background: rgba(#f00, 1);
+}
+.hot-product .menu-content .swiper-slide {
+	box-shadow: 0px 0px 50px rgba(135, 67, 220, .3);
+}
+.anli_more {
+	background:rgba(#f00, 1);
+}
+.banner2_box {
+	background: rgba(#f00, 1);
+}
+#kefu-ball {
+	background: rgba(#f00, 1);
+	box-shadow: 0px 0px 20px 0px rgba(135, 67, 220, .6);
+}
+.incp_more {
+	background-color: rgba(0,159,69, 1);
+	box-shadow: 0 8px 8px 0px rgba(0, 150, 255, 0.1);
+}
+.chanpin_nr ul li {
+	background: rgba(255, 255, 255, 1);
+	box-shadow: 0px 0px 50px rgba(#f00, .3);
+}
+.cp_w2 {
+	background:rgba(#f00, 1);
+}
+.youshi_box {
+	background: rgba(#f00, 1);
+}
+.ys .online span {
+	background:rgba(#f00, 1);
+	color: rgba(50, 179, 255, 1);
+}
+.ys .swiper-slide {
+	box-shadow: 0 0 40px rgba(#f00, 1);
+}
+.ys .swiper-slide h4 span {
+	background: rgba(#f00, 1);
+	color:rgba(255, 255, 255, 1);
+}
+.case .swiper-slide {
+	background: rgba(#f00, 1);
+	box-shadow: 0px 5px 15px rgba(#f00, .4);
+}
+.case .swiper-slide .item-title {
+	background: rgba(#f00, .5);
+}
+.tabs dd.active {
+	background: rgba(#f00, 1);
+}
+.in_news {
+	box-shadow: 0px 0px 50px rgba(#f00, .3);
+}
+.news_more {
+	background: rgba(#f00, 1);
+}
+.footer_box {
+	background: rgba(#f00, 1);
+}
+.footer_nav {
+	background:rgba(#f00, 1);
+}
+.footer_phone {
+	background: rgba(#f00, 1);
+}
+.anli_line {
+    background: rgba(#f00, 1);
+</style></head><body><!---------header-------------><div class="header"><div class="headerbox"><div class="logo-img"><img src="m_temp/img/logo.png" /></div><h1>西安万家灯火信息技术有限公司</h1><p>- 万家灯火CMS系统 先天快人一步 -</p></div><div class="banner wow fadeInUp"><div class="swiper"><div class="current-swiper swiper-container"><div class="swiper-wrapper"><div class="swiper-slide b"><img src="https://www.baidu.com/img/bd_logo1.png" title="产品标题0123abcseABCDE" alt="产品标题0123abcseABCDE"></div></div></div><div class="nocurrent-swiper left-swiper swiper-container swiper-no-swiping"><div class="swiper-wrapper"></div></div><div class="nocurrent-swiper right-swiper swiper-container swiper-no-swiping"><div class="swiper-wrapper"></div></div></div></div></div><!-----------header end----------------><!-------nav-----------><div class="nav_box wow fadeInUp"  data-wow-delay=".2s"><ul><li><div class="nav_tb"></div><a href="/" title="网站首页">网站首页</a></li><li><div class="nav_tb"></div><a href="" title="分类名称0123ABCDancd">分类名称0123ABCDancd</a></li></ul></div><div class="clearfix"></div><!---------------nav end---------------------><!------------anli------------><div class="hot-product menu-item"><div class="anli_title wow fadeInUp" ><a href="" title="案例展示">案例展示</a><div class="anli_line"></div></div><div class="menu-content wow fadeInUp"><div class="swiper-container"><div class="swiper-wrapper"><div class="swiper-slide"><a href=""><img src="https://www.baidu.com/img/bd_logo1.png" /></a><div class="info"><div class="anli_t1"><a href=""><span>产品标题0123abcseABCDE</span><p>摘要又称概要、内容提要。摘要是以提供文献内容梗概为目的，不加评论和补充解释，简明、确切地记述文献重要内容的短文。其基本要素包括研究目的、方法、结果和结论。具体地讲就是研究工作的主要对象和范围，采用的手段和方法...</p></a></div><a href=""><div class="anli_more">+more</div></a></div></div><div class="swiper-slide last-slide"><span class="icon"></span><p class="text"><a href="" class="">左滑查看更多</a></p></div></div></div></div></div><div class="clearfix"></div><!---------anli end------------><!---------------><div class="banner2_box  wow fadeInUp"><div class="banner2"><div class="banner2_left"><span>多年行业积累海量数据</span><p>打造具有影响力的DMP平台</p></div><div class="banner2_right"><div class="b2_phone"></div><div class="b2_pw">- 全国统一咨询热线 -
+        <p>400-888-8888</p></div></div></div><div class="banner2_sanjiao"></div></div><!-------------------------><!------------chanpin-------------------><div class="infl"><div class="swiper-container   wow fadeInUp"><div class="swiper-wrapper"><div class="swiper-slide wid1"><a href="">分类名称0123ABCDancd</a></div></div></div></div><div class="chanpin_nr  wow fadeInUp"><ul><li><a href=""><img src="https://www.baidu.com/img/bd_logo1.png"></a><p><div class="cp_w1"><span>产品标题0123abcseABCDE</span><br>
+        摘要又称概要、内容提要。摘要是以提供文献内容梗概为目的，不加评论和补充解释，简明、确切地记述文献重要内容的短文。其基本要素包括研究目的、方法、结果和结论。具体地讲就是研究工作的主要对象和范围，采用的手段和方法...</div><div class="cp_w2"><a href="">+more</a></div></p></li></ul></div><div class="clearfix"></div><!------------chanpin---end----------------><!----------youshi-------------->
+<div class="youshi_ss wow fadeInUp animated_4">
 
-    <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
-    </script>
-  </body>
-</html>
+<div class="youshi">
+<div class="youshi_title"><a href=""><span>万家灯火CMS</span>
+    <p>-  全网生态整合营销新方向  -</p>
+    </a></div>
+
+
+<div class="youshi_pro">
+
+
+
+<div class="youshi_pro_1">
+
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+<div class="swiper-slide">	  
+<div class="youshi_nr">
+<div class="youshi_nrpic" data-swiper-parallax="-1000" data-swiper-parallax-duration="700"> <img src="m_temp/pic/banner3.jpg" /> </div>
+<div class="youshi_nrtt" data-swiper-parallax="-3000" data-swiper-parallax-duration="700">
+系统化技术平台，更省钱
+</div>
+<div class="youshi_nrt" data-swiper-parallax="-5000" data-swiper-parallax-duration="700">
+锁定搜索引擎网站排名靠前；同样的流量更多的询盘，比传统网页高20倍，流量更多；全站策划帮你做定位、挖卖点、塑价值让您的网络营销事半功倍!
+</div>
+</div>	  
+</div>
+
+<div class="swiper-slide">
+<div class="youshi_nr">
+<div class="youshi_nrpic" data-swiper-parallax="-1000" data-swiper-parallax-duration="700"> <img src="m_temp/pic/banner3.jpg" /> </div>
+<div class="youshi_nrtt" data-swiper-parallax="-3000" data-swiper-parallax-duration="700">
+系统化技术平台，更省钱
+</div>
+<div class="youshi_nrt" data-swiper-parallax="-5000" data-swiper-parallax-duration="700">
+锁定搜索引擎网站排名靠前；同样的流量更多的询盘，比传统网页高20倍，流量更多；全站策划帮你做定位、挖卖点、塑价值让您的网络营销事半功倍!
+</div>
+</div>	  
+</div>
+
+<div class="swiper-slide">
+<div class="youshi_nr">
+<div class="youshi_nrpic" data-swiper-parallax="-1000" data-swiper-parallax-duration="700"> <img src="m_temp/pic/banner3.jpg" /> </div>
+<div class="youshi_nrtt" data-swiper-parallax="-3000" data-swiper-parallax-duration="700">
+系统化技术平台，更省钱
+</div>
+<div class="youshi_nrt" data-swiper-parallax="-5000" data-swiper-parallax-duration="700">
+锁定搜索引擎网站排名靠前；同样的流量更多的询盘，比传统网页高20倍，流量更多；全站策划帮你做定位、挖卖点、塑价值让您的网络营销事半功倍!
+</div>
+</div>	  
+</div>
+
+<div class="swiper-slide">
+<div class="youshi_nr">
+<div class="youshi_nrpic" data-swiper-parallax="-1000" data-swiper-parallax-duration="700"> <img src="m_temp/pic/banner3.jpg" /> </div>
+<div class="youshi_nrtt" data-swiper-parallax="-3000" data-swiper-parallax-duration="700">
+系统化技术平台，更省钱
+</div>
+<div class="youshi_nrt" data-swiper-parallax="-5000" data-swiper-parallax-duration="700">
+锁定搜索引擎网站排名靠前；同样的流量更多的询盘，比传统网页高20倍，流量更多；全站策划帮你做定位、挖卖点、塑价值让您的网络营销事半功倍!
+</div>
+</div>	  
+</div>
+
+
+
+      
+    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>    
+</div>
+
+</div>
+
+
+
+</div>
+
+</div>
+
+</div>
+
+<!-------------youshi end------------------------><!----------------hezuo---------------------><div class="case container menu-item"><div class="anli_title wow fadeInUp" ><a href="" title="合作客户">合作客户</a><div class="anli_line"></div></div><div class="menu-content wow fadeInUp"><div class="swiper-container"><div class="swiper-wrapper"><!-- 至少调用四个 --><div class="swiper-slide"><a href=""><div class="item-title"><h4>产品标题0123abcseABCDE</h4></div><div class="img"><img src="https://www.baidu.com/img/bd_logo1.png" /></div></a></div></div></div></div></div><!---------------hezuo----------------------><!-----------about--------><div class="sabout"><div class="sabout_t wow fadeInUp animated_4"><div class="sab_t"><div class="sab_t1"><a href="#">关于我们</a><div class="sab_t1xl"></div><div class="sab_t1xr"></div></div><div class="sab_t2"> -  全网生态整合营销新方向  - </div></div></div><div class="sabout_pro wow fadeInUp animated_4"><div class="sabout_nr"><div class="sabout_nrpic"><img src="https://www.baidu.com/img/bd_logo1.png" /></div><div class="sabout_nrt"></div><div class="incp_more"><a href="">了解更多+</a></div></div></div></div><!---------------------about end-------------><!----------------news-------------------------><div class="inews wow fadeInUp animated_4"><div class="tabs"><dd class="active">分类名称0123ABCDancd</dd><dd>分类名称0123ABCDancd</dd></div><div id="tabs-container" class="swiper-container"><div class="swiper-wrapper"><div class="swiper-slide"><div class="inews_pro"><div class="in_news wow fadeInRight animated_4"><div class="in_news_l"><div class="in_news_laa"><a href=""><img src="https://www.baidu.com/img/bd_logo1.png" /></a></div></div><div class="in_news_r"><div class="in_news_r1"><h6><a href="#">产品标题0123abcseABCDE</a></h6><h4>摘要又称概要、内容提要。摘要是以提供文献内容梗概为目的，不加评论和补充解释，简明、确切地记述文献重要内容的短文。其基本要素包括研究目的、方法、结果和结论。具体地讲就是研究工作的主要对象和范围，采用的手段和方法</h4><div class="news_more"><a href="">- read more</a></div></div></div><div class="clearfix"></div></div></div></div></div></div></div><!--------------------news end-----------------------------><!------------footer-------------><div class="footer_box  wow fadeInUp"><div class="foot_di"><div class="footer_dleft"><p></p><p>全国服务热线：400-888-8888 邮箱：系统信息0123ABCDabcd </p><p>地址：系统信息0123ABCDabcd</p><p>
+        &nbsp;&nbsp;
+        </p></div><div class="footer_erweima"><img src="http://www.btoe.cn/uploads/201507/18/201507180920210891.jpg"></div></div></div><!----------footer end-------------------><!---------footer_nav----------><div class="footer_nav"><div class="footer_phone"><a href="tel:400-888-8888"><img src="m_temp/img/phone_di.png"></a></div><ul><li><a href="/"><img src="m_temp/img/home.png"><p>主页</p></a></li><li><a href=""><img src="m_temp/img/home2.png"><p>产品</p></a></li><li style="margin-left:120px;"><a href="tel:400-888-8888"><img src="m_temp/img/home3.png"><p>咨询</p></a></li><li><a href=""><img src="m_temp/img/home4.png"><p>联系</p></a></li></ul></div><!-------------footer nav_end-----------------><div id="kefu-ball"><a href="tel:400-888-8888"><img src="m_temp/img/kefu.png" alt="" /></a></div><script src="m_temp/js/Zepto.min.js"></script><script src="m_temp/js/swiper.min.js"></script><script src="m_temp/js/Inertia.js"></script><script src="m_temp/js/index.js"></script><!--产品分类--><script>
+    var swiper = new Swiper('.infl .swiper-container', {        
+		slidesPerView :'auto',
+        paginationClickable: true
+		});
+</script><!--新闻--><script type="text/javascript">
+window.onload = function() {
+    var tabsSwiper = new Swiper('#tabs-container', {
+        speed: 500,
+        on: {
+            slideChangeTransitionStart: function() {
+                $(".tabs .active").removeClass('active');
+                $(".tabs dd").eq(this.activeIndex).addClass('active');
+            }
+        }
+    })
+    $(".tabs dd").on('click', function(e) {
+        e.preventDefault()
+        $(".tabs .active").removeClass('active')
+        $(this).addClass('active')
+        tabsSwiper.slideTo($(this).index())
+    })
+}
+</script><!--优势--><script>
+    var swiper = new Swiper('.youshi_pro_1 .swiper-container', {
+      slidesPerView: 1,
+      
+      loop: true,
+	  effect : 'flip',
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+		renderBullet: function (index, className) {
+          return '<span class="' + className + '">' + (index + 1) + '</span>';
+        },
+      },      
+    });
+</script></body></html>
